src/objects/Integration_Login_Credential__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object stores external system login credential.</description>
    <fields>
        <fullName>Access_Token_Session__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>This field will get auto populated; do not populate it.</inlineHelpText>
        <label>Access Token/Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Integration Login Credential</label>
</CustomObject>